# Babyfoot

./: .dockerignore  .gitignore  babyfoot-dump.sql  babyfoot.sql  docker-compose.yml  pyproject.toml  test_main.http
app/: main.py
app/database_setup/: init_rank.py  updat_initial_rank.py
app/db/: models.py
app/ranking/: custom_elo.py  openskill.py
backend/: Dockerfile  consts.py  jobs.py  main.py  schemas.py  settings.py  utils.py
backend/api/: __init__.py  db_errors.py  games.py  players.py  stats.py  test_games_validation.py
backend/database_setup/: get_data.py  get_data_users.py  rebuild_ratings_and_history.py  seed_if_empty.py  updat_initial_rank.py
backend/db/: __init__.py  database.py  models.py  session.py
backend/ranking/: __init__.py  custom_elo.py  openskill_ranking.py  own_packetlucet.py  test.py
backend/tests/: test_create_game_same_day.py  test_custom_elo.py  test_game_payload_validation.py  test_jobs_daily_snapshot.py  test_rebuild_rating_history.py  test_repr.py  test_same_day_recalculation.py
docker/postgres/init/: 10-import-babyfoot-dump.sh  10-import-babyfoot.sh
front-end/: .gitignore  .prettierignore  Dockerfile  components.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
front-end/src/: app.css  app.html  hooks.server.ts
front-end/src/lib/: current-player.ts
front-end/src/lib/api/: matches.ts  players.ts  types.ts
front-end/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
front-end/src/routes/create/: +page.svelte  +page.ts
nginx/: default.conf
(+26 files in other folders)
